--- a/app/src/main/res/xml/settings_frag_ui.xml
+++ b/app/src/main/res/xml/settings_frag_ui.xml
@@ -11,6 +11,12 @@
             android:title="@string/settings_use_light_theme_title"
             android:summary="@string/settings_use_light_theme_summary_ena" />
         <ListPreference
+            android:key="@string/settings_display_font_scale_factor"
+            android:title="@string/settings_display_font_scale_factor_title"
+            android:dialogTitle="@string/settings_display_font_scale_factor_dialog_title"
+            android:entries="@array/settings_display_font_scale_factor_list_entries"
+            android:entryValues="@array/settings_display_font_scale_factor_list_values" />
+        <ListPreference
             android:key="@string/settings_language"
             android:title="@string/settings_language_title"
             android:dialogTitle="@string/settings_language_dialog_title"
