--- a/app/src/main/res/menu/menu_top.xml
+++ b/app/src/main/res/menu/menu_top.xml
@@ -34,6 +34,10 @@
           android:icon="@android:drawable/ic_menu_preferences"
           appv7:showAsAction="ifRoom"/>
 
+    <item android:id="@+id/menu_top_encoding"
+        android:title="@string/msgs_menu_encoding"
+        />
+
     <item android:id="@+id/menu_top_show_system_information"
         android:title="@string/msgs_menu_list_system_info"
         />
