--- a/app/src/main/res/values/string_en.xml
+++ b/app/src/main/res/values/string_en.xml
@@ -216,6 +216,7 @@
         <string name="msgs_menu_log_management">Log management</string>
         <string name="msgs_menu_about">About application</string>
         <string name="msgs_menu_settings">Settings</string>
+        <string name="msgs_menu_encoding">Encoding</string>
         <string name="msgs_menu_open_zip">Open ZIP file</string>
         <string name="msgs_menu_create_new_zip">Create ZIP file</string>
         <string name="msgs_menu_refresh">Refresh file list</string>
