--- a/app/src/main/res/layout/main_zip_file.xml
+++ b/app/src/main/res/layout/main_zip_file.xml
@@ -29,12 +29,17 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="2dp"
                     android:minHeight="40dp" />
-                <Button
+                <ImageButton
                     android:id="@+id/zip_file_info_close_btn"
-                    android:layout_width="wrap_content"
-                    android:layout_height="45dp"
+                    android:layout_width="44dp"
+                    android:layout_height="44dp"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="2dp"
+                    android:src="@drawable/ic_32_close_black"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:insetRight="0dp"
+                    android:insetLeft="0dp"
                     android:text="@string/msgs_zip_zip_file_info_close_button"
                     android:textAppearance="?android:attr/textAppearanceSmall"/>
 
