-Context menuにEncodingを追加 -Menu表示の最適化

--- a/app/src/main/res/values-fr/String_fr.xml
+++ b/app/src/main/res/values-fr/String_fr.xml
@@ -111,6 +111,7 @@
         <string name="msgs_zip_zip_item_property_directory">Répertoire=%1$s\nNombre d\'articles = %2$s\nTaille comprimée = %3$,d\nTaille non comprimée = %4$,d\nRapport de compression = %5$d%%%</string>
         <string name="msgs_zip_zip_item_property_encrypted_yes">Oui</string>
         <string name="msgs_zip_zip_item_property_encrypted_no">Non</string>
+        <string name="msgs_zip_zip_item_change_encoding">Changement d\'encodage</string>
         <string name="msgs_zip_zip_file_being_updated">Le fichier zip est en cours de mise à jour. Veuillez patienter.</string>
         <string name="msgs_zip_zip_file_creation_failed">La création de BufferedZipFile a échoué.</string>
         <string name="msgs_zip_sdcard_create_zip_file_start">La création du fichier ZIP a commencé.</string>
@@ -216,7 +217,7 @@
         <string name="msgs_menu_log_management">Gestion des journaux</string>
         <string name="msgs_menu_about">À propos de la candidature</string>
         <string name="msgs_menu_settings">Paramètres</string>
-        <string name="msgs_menu_encoding">Encoding</string>
+        <string name="msgs_menu_encoding">Changement d\'encodage</string>
         <string name="msgs_menu_open_zip">Ouvrir le fichier ZIP</string>
         <string name="msgs_menu_create_new_zip">Créer un fichier ZIP</string>
         <string name="msgs_menu_refresh">Rafraîchir la liste des fichiers</string>
