--- a/app/src/main/res/values-ja/string_ja.xml
+++ b/app/src/main/res/values-ja/string_ja.xml
@@ -6,8 +6,8 @@
         <string name="msgs_about_dlg_change_btn">更新履歴</string>
         <string name="msgs_dlg_title_about">ZipUtility3について</string>
         <string name="msgs_dlg_title_about_func_desc">ZipUtility3_Desc_JA_Short.htm</string>
-        <string name="msgs_dlg_title_about_privacy_desc">ZipUtility3_Privacy_JA.htm</string>
-        <string name="msgs_dlg_title_about_change_desc">ZipUtility3_Change_JA.htm</string>
+        <string name="msgs_dlg_title_about_privacy_desc">ZipUtility3_Privacy_JA.html</string>
+        <string name="msgs_dlg_title_about_change_desc">ZipUtility3_Change_JA.html</string>
     <!-- Log -->
         <string name="msgs_log_management_title">ログ管理</string>
         <string name="msgs_log_management_enable_log_file_hint">ZipUtility3に関する質問・問題を記述してください</string>
