--- a/app/src/main/res/values-ja/string_ja.xml
+++ b/app/src/main/res/values-ja/string_ja.xml
@@ -127,7 +127,7 @@
         <string name="msgs_search_file_dlg_search_progress">%s%%検索終了。</string>
         <string name="msgs_search_file_dlg_search_cancelled">ファイル検索を中止しました</string>
         <string name="msgs_search_file_dlg_search_result">項目数=%1$,d, サイズ=%2$,d バイト</string>
-        <string name="msgs_search_file_dlg_search_hidden_item">隠しディレクトリーと隠しファイルを検索する。</string>
+        <string name="msgs_search_file_dlg_search_hidden_item">隠しディレクトリーとファイルを検索する。</string>
         <string name="msgs_search_file_dlg_file_name_filter">フィルター</string>
         <string name="msgs_search_file_dlg_search_case_sensitive">大文字・小文字を区別する</string>
         <string name="msgs_search_file_dlg_sorting">並び替え中</string>
@@ -322,6 +322,9 @@
         <string name="settings_device_orientation_portrait_title">端末の向き</string>
         <string name="settings_device_orientation_portrait_summary_ena">端末の向きをポートレイトに固定する</string>
         <string name="settings_device_orientation_portrait">settings_device_orientation_portrait</string>
+        <string name="settings_restore_sort_order_when_app_starts_title">並び替え順序の引継ぎ</string>
+        <string name="settings_restore_sort_order_when_app_starts_summary_ena">ファイルリストの並び替え順序を前回から引き継ぐ</string>
+        <string name="settings_restore_sort_order_when_app_starts">settings_restore_sort_order_when_app_starts</string>
         <string name="settings_exit_clean_title">アプリ終了時の処理</string>
         <string name="settings_exit_clean_summary_ena">プロセスをKillする</string>
         <string name="settings_exit_clean">settings_exit_clean</string>
