--- a/app/src/main/res/values/string_en.xml
+++ b/app/src/main/res/values/string_en.xml
@@ -322,6 +322,9 @@
         <string name="settings_device_orientation_portrait_title">The orientation of the device</string>
         <string name="settings_device_orientation_portrait_summary_ena">Fix the orientation of the device to portrait</string>
         <string name="settings_device_orientation_portrait">settings_device_orientation_portrait</string>
+        <string name="settings_restore_sort_order_when_app_starts_title">Taking over the sort order</string>
+        <string name="settings_restore_sort_order_when_app_starts_summary_ena">Carry over the sort order of the file list from the previous time.</string>
+        <string name="settings_restore_sort_order_when_app_starts">settings_restore_sort_order_when_app_starts</string>
         <string name="settings_exit_clean_title">Exit cleanly</string>
         <string name="settings_exit_clean_summary_ena">Kill application process after application cleanup</string>
         <string name="settings_exit_clean">settings_exit_clean</string>
