--- a/app/src/main/res/xml/settings_frag_compress.xml
+++ b/app/src/main/res/xml/settings_frag_compress.xml
@@ -2,22 +2,25 @@
 <PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <PreferenceCategory android:title="@string/settings_compress_title">
+    <PreferenceCategory android:title="@string/settings_compress_title" android:layout="@layout/setting_preference_category_layout">
         <com.sentaroh.android.Utilities3.Preference.ListEditPreference
             android:key="@string/settings_no_compress_file_type"
             android:title="@string/settings_no_compress_file_type_title"
             android:inputType="text"
-            app:hint="@string/settings_no_compress_file_type_hint"/>
+            app:hint="@string/settings_no_compress_file_type_hint"
+            android:singleLineTitle="false"/>
         <ListPreference
             android:key="@string/settings_zip_default_encoding"
             android:title="@string/settings_zip_default_encoding_title"
             android:dialogTitle="@string/settings_zip_default_encoding_dialog_title"
             android:entries="@array/settings_zip_default_encoding_list_entries"
-            android:entryValues="@array/settings_zip_default_encoding_list_values"/>
+            android:entryValues="@array/settings_zip_default_encoding_list_values"
+            android:singleLineTitle="false"/>
         <CheckBoxPreference
             android:key="@string/settings_suppress_add_external_storage_notification"
             android:title="@string/settings_suppress_add_external_storage_notification_title"
-            android:summary="@string/settings_suppress_add_external_storage_notification_summary_ena" />
+            android:summary="@string/settings_suppress_add_external_storage_notification_summary_ena"
+            android:singleLineTitle="false"/>
     </PreferenceCategory>
 
 </PreferenceScreen>
