--- a/app/src/main/res/xml/settings_frag_ui.xml
+++ b/app/src/main/res/xml/settings_frag_ui.xml
@@ -1,34 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
 	xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="@string/settings_ui_title">
+    <PreferenceCategory android:title="@string/settings_ui_title" android:layout="@layout/setting_preference_category_layout">
         <CheckBoxPreference
             android:key="@string/settings_device_orientation_portrait"
             android:title="@string/settings_device_orientation_portrait_title"
-            android:summary="@string/settings_device_orientation_portrait_summary_ena" />
+            android:summary="@string/settings_device_orientation_portrait_summary_ena"
+            android:singleLineTitle="false"/>
+        <CheckBoxPreference
+            android:key="@string/settings_restore_sort_order_when_app_starts"
+            android:title="@string/settings_restore_sort_order_when_app_starts_title"
+            android:summary="@string/settings_restore_sort_order_when_app_starts_summary_ena"
+            android:singleLineTitle="false"/>
         <CheckBoxPreference
             android:key="@string/settings_use_light_theme"
             android:title="@string/settings_use_light_theme_title"
-            android:summary="@string/settings_use_light_theme_summary_ena" />
+            android:summary="@string/settings_use_light_theme_summary_ena"
+            android:singleLineTitle="false"/>
         <ListPreference
             android:key="@string/settings_display_font_scale_factor"
             android:title="@string/settings_display_font_scale_factor_title"
             android:dialogTitle="@string/settings_display_font_scale_factor_dialog_title"
             android:entries="@array/settings_display_font_scale_factor_list_entries"
-            android:entryValues="@array/settings_display_font_scale_factor_list_values" />
+            android:entryValues="@array/settings_display_font_scale_factor_list_values"
+            android:singleLineTitle="false"/>
         <ListPreference
             android:key="@string/settings_language"
             android:title="@string/settings_language_title"
             android:dialogTitle="@string/settings_language_dialog_title"
             android:entries="@array/settings_language_list_entries"
-            android:entryValues="@array/settings_language_list_values" />
+            android:entryValues="@array/settings_language_list_values"
+            android:singleLineTitle="false"/>
         <CheckBoxPreference
             android:key="@string/settings_confirm_exit"
             android:title="@string/settings_confirm_exit_title"
-            android:summary="@string/settings_confirm_exit_summary_ena" />
+            android:summary="@string/settings_confirm_exit_summary_ena"
+            android:singleLineTitle="false"/>
         <com.sentaroh.android.Utilities3.Preference.ListEditPreference
             android:key="@string/settings_open_as_text_file_type"
             android:title="@string/settings_open_as_text_file_type_title"
-            android:inputType="text"/>
+            android:inputType="text"
+            android:singleLineTitle="false"/>
     </PreferenceCategory>
 </PreferenceScreen>
