Clipboard表示の調整

--- a/app/src/main/res/layout/main_local_file.xml
+++ b/app/src/main/res/layout/main_local_file.xml
@@ -86,12 +86,15 @@
                 android:id="@+id/local_file_copy_cut_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="2dp"
+                android:layout_marginEnd="2dp"
                 android:background="@drawable/dialog_box_outline_turquoise"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:orientation="horizontal">
                     <TextView
                         android:layout_width="wrap_content"
@@ -120,6 +123,9 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="5dp"
                     android:orientation="horizontal">
                     <com.sentaroh.android.Utilities3.Widget.NonWordwrapButton
                         android:id="@+id/local_file_copy_cut_item"
